REG-7828 Sonar trivia